# operating-systems-usac-course

./: .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  README.md
content/: syllabus.md
contrib/: CONTRIBUTING-ES.md  CONTRIBUTING.md
examples/golang/concurrency/: array.go  defer.go  div35.go  func.go  install.txt  pkgexample.go
examples/golang/concurrency/concurrency/: example1.go  example2.go
examples/golang/concurrency/hellolib/: hellolib.go
lang/en/content/: syllabus.md
lang/en/projects/: projects.md
projects/: project1.md
resources/: README.md
resources/cloudnative/gRPC-go/: chat.proto  go.mod  go.sum
resources/content/operatingsystems/: cloudnative-OS.excalidraw
resources/gRPC-go/: README.md
resources/gRPC-go/chatserver/: chat.pb.go
resources/gRPC-go/client/: client.go
resources/kubernetes/fluentd/: elasticsearch_statefulset.yaml  fluentd.yaml  full.yaml
resources/kubernetes/gateway-api/: README.md
resources/languages/python/: Perro.py  concurrency.py  object.py  thread.py
resources/languages/rust/: README.md
resources/languages/rust/Google PubSub/Publisher/: .gitignore  Cargo.toml  README.md
resources/languages/rust/Google PubSub/Publisher/src/: main.rs
resources/languages/rust/api/: Cargo.toml  Readme.md
resources/languages/rust/api/src/: main.rs
resources/languages/rust/api/src/handlers/: hello.rs
resources/tests/: README.md
resources/tests/Locust/: HowToUseIt.json  HowToUseIt.md  HowToUseIt.py
resources/tests/locust/: How to use it.md  README.txt  install.sh  loadtest.py  run.sh  traffic.py
workshops/: README.md
(+72 files in other folders)
