[package]
name = "api"
version = "0.1.0"
edition = "2018"

[dependencies]
actix = "0.8"
actix-web = "1.0.0-beta"
chrono = { version = "0.4.19", default-features= false, features = ["clock", "std"] }
lazy_static = "1.4.0"

# Serialization/Deserialization
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
futures = "0.1"
