[package]
name = "rust-pubsub-example"
version = "0.1.0"
edition = "2018"
authors = ["oscarllamasusac@gmail.com"]

[dependencies]
dotenv = "0.15.0"
base64 = "*"
google-pubsub1 = "2.0.8+20210322"
hyper = "0.14.13"
rustls = "0.19.1"
hyper-tls = "0.5.0"
hyper-rustls = "0.22.1"
yup-oauth2 = "5.1.0"
tokio = { version = "1.12.0", features = ["macros"] }
async-std = { version = "1.10.0", features = ["attributes", "tokio1"] }
futures = "0.3.17"